Finished page SOBRE

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -43,20 +43,23 @@
         <div class="contact-container">
           <div>
             <strong>
-              Email:
+              Email: &nbsp;
             </strong>
             <a href="mailto:bruno.juwer1997@gmail.com">bruno.juwer1997@gmail.com</a>
           </div>
           <div>
             <strong>
-              Número:
+              Número: &nbsp;
             </strong>
             <a href="tel:+5551995035116">(51) 9 95035116</a>
           </div>
         </div>
       </div>
       <div class="about-me">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque est at, commodi eius nam provident fugiat sunt consequuntur totam labore quod quasi similique eligendi expedita quae. Quidem dolorem repellat iste.</p>
+        <p>
+          <i class="ph-fill ph-hand-waving"></i>
+          Seja bem-vindo(a) ao meu portifólio, sou um desenvolverdor fullstack apaixonado por técnologia e música!
+        </p>
       </div>
       <div class="social-media-container">
         <ul>
