--- a/public/pages/conhecimentos.html
+++ b/public/pages/conhecimentos.html
@@ -34,5 +34,101 @@
       </nav>
     </div>
   </section>
+
+  <main class="knowledge-container">
+    <h1>Conhecimentos</h1>
+
+    <section>
+      <article class="backend-container">
+        <h2>Backend</h2>
+        <ol class="card-container" type="A">
+          <li>
+            <div>
+              <h3>Java</h3>
+              <img 
+                src="../images/java-logo.png" 
+                alt="Logo da linguagem de programação Java"
+              >
+            </div>
+            <span>
+              NVL: &nbsp; <p>Intermediário</p>
+            </span>
+          </li>
+          <li>
+            <div>
+              <h3>Spring</h3>
+              <img 
+                src="../images/spring-logo.svg" 
+                alt="Logo do framework Spring"
+              >
+            </div>
+            <span>
+              NVL: &nbsp; <p>Intermediário</p>
+            </span>
+          </li>
+        </ol>
+      </article>
+      <article class="frontend-container">
+        <h2>Frontend</h2>
+
+          <ol class="card-container" type="A">
+            <li>
+              <div>
+                <h3>HTML</h3>
+                <img 
+                  src="../images/java-logo.png" 
+                  alt="Logo da linguagem de marcação HTML"
+                >
+              </div>
+              <span>
+                NVL: &nbsp; <p>Intermediário</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>CSS</h3>
+                <img 
+                  src="../images/java-logo.png" 
+                  alt="Logo da linguagem de estilizção CSS"
+                >
+              </div>
+              <span>
+                NVL: &nbsp; <p>Intermediário</p>
+              </span>
+            </li>
+          </ol>
+      </article>
+      <article class="network-container">
+        <h2>Redes / Infra</h2>
+
+          <ol class="card-container" type="A">
+            <li>
+              <div>
+                <h3>Java</h3>
+                <img 
+                  src="../images/java-logo.png" 
+                  alt="Logo da linguagem de programação Java"
+                >
+              </div>
+              <span>
+                NVL: &nbsp; <p>Intermediário</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>Java</h3>
+                <img 
+                  src="../images/java-logo.png" 
+                  alt="Logo da linguagem de programação Java"
+                >
+              </div>
+              <span>
+                NVL: &nbsp; <p>Intermediário</p>
+              </span>
+            </li>
+          </ol>
+      </article>
+    </section>
+  </main>
 </body>
 </html>
