Changed layout of conhecimentos page

--- a/public/pages/conhecimentos.html
+++ b/public/pages/conhecimentos.html
@@ -37,97 +37,144 @@
 
   <main class="knowledge-container">
     <h1>Conhecimentos</h1>
-
     <section>
-      <article class="backend-container">
+      <section>
         <h2>Backend</h2>
-        <ol class="card-container" type="A">
-          <li>
-            <div>
-              <h3>Java</h3>
-              <img 
-                src="../images/java-logo.png" 
-                alt="Logo da linguagem de programação Java"
-              >
-            </div>
-            <span>
-              NVL: &nbsp; <p>Intermediário</p>
-            </span>
-          </li>
-          <li>
-            <div>
-              <h3>Spring</h3>
-              <img 
-                src="../images/spring-logo.svg" 
-                alt="Logo do framework Spring"
-              >
-            </div>
-            <span>
-              NVL: &nbsp; <p>Intermediário</p>
-            </span>
-          </li>
-        </ol>
-      </article>
-      <article class="frontend-container">
+        <div class="backend-container">
+          <ol class="card-container" type="A">
+            <li>
+              <div>
+                <h3>Java</h3>
+                <img 
+                  src="../images/java-logo.png" 
+                  alt="Logo da linguagem de programação Java"
+                >
+              </div>
+              <span>
+                NVL: &nbsp; <p>Intermediário</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>Spring</h3>
+                <img 
+                  src="../images/spring-logo.svg" 
+                  alt="Logo do framework Spring"
+                >
+              </div>
+              <span>
+                NVL: &nbsp; <p>Intermediário</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>PHP</h3>
+                <img 
+                  src="../images/php-logo.png" 
+                  alt="Logo da linguagem PHP"
+                >
+              </div>
+              <span>
+                NVL: &nbsp; 
+                <p style="background-color: var(--blue-primary);">Básico</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>Laravel</h3>
+                <img 
+                  src="../images/laravel-logo.png" 
+                  alt="Logo do framework Laravel"
+                >
+              </div>
+              <span>
+                NVL: &nbsp; 
+                <p style="background-color: var(--blue-primary);">Básico</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>ExpressJS</h3>
+                <img 
+                  src="../images/expressjs.png" 
+                  alt="Logo da blibloteca ExpressJS"
+                >
+              </div>
+              <span>
+                NVL: &nbsp; 
+                <p style="background-color: var(--blue-primary);">Básico</p>
+              </span>
+            </li>
+          </ol>
+        </div>
+      </section>
+      <section>
         <h2>Frontend</h2>
+        <div class="frontend-container">
+            <ol class="card-container" type="A">
+              <li>
+                <div>
+                  <h3>HTML</h3>
+                  <img 
+                    src="../images/java-logo.png" 
+                    alt="Logo da linguagem de marcação HTML"
+                  >
+                </div>
+                <span>
+                  NVL: &nbsp; <p>Intermediário</p>
+                </span>
+              </li>
+              <li>
+                <div>
+                  <h3>CSS</h3>
+                  <img 
+                    src="../images/java-logo.png" 
+                    alt="Logo da linguagem de estilizção CSS"
+                  >
+                </div>
+                <span>
+                  NVL: &nbsp; 
+                  <p>Intermediário</p>
+                </span>
+              </li>
+            </ol>
+        </div>
+      </section>
 
-          <ol class="card-container" type="A">
-            <li>
-              <div>
-                <h3>HTML</h3>
-                <img 
-                  src="../images/java-logo.png" 
-                  alt="Logo da linguagem de marcação HTML"
-                >
-              </div>
-              <span>
-                NVL: &nbsp; <p>Intermediário</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3>CSS</h3>
-                <img 
-                  src="../images/java-logo.png" 
-                  alt="Logo da linguagem de estilizção CSS"
-                >
-              </div>
-              <span>
-                NVL: &nbsp; <p>Intermediário</p>
-              </span>
-            </li>
-          </ol>
-      </article>
-      <article class="network-container">
-        <h2>Redes / Infra</h2>
+      <section>
+        <h2>Redes / Infra / Banco de dados</h2>
+        <div class="network-container">
+            <ol class="card-container" type="A">
+              <li>
+                <div>
+                  <h3>Redes</h3>
+                  <img 
+                    src="../images/java-logo.png" 
+                    alt="Logo da linguagem de programação Java"
+                  >
+                </div>
+                <span>
+                  NVL: &nbsp; 
+                  <p style="background-color: var(--green-primary);">Avançado</p>
+                </span>
+              </li>
+              <li>
+                <div>
+                  <h3>Firewall</h3>
+                  <img 
+                    src="../images/java-logo.png" 
+                    alt="Logo da linguagem de programação Java"
+                  >
+                </div>
+                <span>
+                  NVL: &nbsp; 
+                  <p style="background-color: var(--green-primary);">Avançado</p>
+                </span>
+              </li>
+            </ol>
+        </div>
+      </section>
 
-          <ol class="card-container" type="A">
-            <li>
-              <div>
-                <h3>Java</h3>
-                <img 
-                  src="../images/java-logo.png" 
-                  alt="Logo da linguagem de programação Java"
-                >
-              </div>
-              <span>
-                NVL: &nbsp; <p>Intermediário</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3>Java</h3>
-                <img 
-                  src="../images/java-logo.png" 
-                  alt="Logo da linguagem de programação Java"
-                >
-              </div>
-              <span>
-                NVL: &nbsp; <p>Intermediário</p>
-              </span>
-            </li>
-          </ol>
-      </article>
     </section>
   </main>
 </body>
