Finished conhecimentos page

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -36,6 +36,8 @@
       </div>
     </section>
 
+    <div class="space"></div>
+    
     <main class="about-container">
       <h1>Bruno <span>Juwer</span></h1>
       <div class="info-container">
