--- a/public/pages/conhecimentos.html
+++ b/public/pages/conhecimentos.html
@@ -35,14 +35,16 @@
     </div>
   </section>
 
+  <div class="space"></div>
+
   <main class="knowledge-container">
     <h1>Conhecimentos</h1>
     <section>
       <section>
-        <h2>Backend</h2>
+        <h2>Backend / Banco de dados</h2>
         <div class="backend-container">
           <ol class="card-container" type="A">
-            <li>
+            <li style="margin-left: 2rem;">
               <div>
                 <h3>Java</h3>
                 <img 
@@ -51,7 +53,7 @@
                 >
               </div>
               <span>
-                NVL: &nbsp; <p>Intermediário</p>
+                <p>Intermediário</p>
               </span>
             </li>
             <li>
@@ -63,7 +65,7 @@
                 >
               </div>
               <span>
-                NVL: &nbsp; <p>Intermediário</p>
+                <p>Intermediário</p>
               </span>
             </li>
             <li>
@@ -75,7 +77,6 @@
                 >
               </div>
               <span>
-                NVL: &nbsp; 
                 <p style="background-color: var(--blue-primary);">Básico</p>
               </span>
             </li>
@@ -88,7 +89,6 @@
                 >
               </div>
               <span>
-                NVL: &nbsp; 
                 <p style="background-color: var(--blue-primary);">Básico</p>
               </span>
             </li>
@@ -101,7 +101,30 @@
                 >
               </div>
               <span>
-                NVL: &nbsp; 
+                <p style="background-color: var(--blue-primary);">Básico</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>MySql</h3>
+                <img 
+                  src="../images/mysql-logo.svg" 
+                  alt="Logo do banco de dados MySql"
+                >
+              </div>
+              <span>
+                <p style="background-color: var(--blue-primary);">Básico</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>Postgres</h3>
+                <img 
+                  src="../images/postgres-logo.png" 
+                  alt="Logo do banco de dados Postegres"
+                >
+              </div>
+              <span>
                 <p style="background-color: var(--blue-primary);">Básico</p>
               </span>
             </li>
@@ -112,29 +135,88 @@
         <h2>Frontend</h2>
         <div class="frontend-container">
             <ol class="card-container" type="A">
-              <li>
+              <li style="margin-left: 2rem;">
                 <div>
                   <h3>HTML</h3>
                   <img 
-                    src="../images/java-logo.png" 
+                    src="../images/html-logo.png" 
                     alt="Logo da linguagem de marcação HTML"
                   >
                 </div>
                 <span>
-                  NVL: &nbsp; <p>Intermediário</p>
+                  <p>Intermediário</p>
                 </span>
               </li>
               <li>
                 <div>
                   <h3>CSS</h3>
                   <img 
-                    src="../images/java-logo.png" 
+                    src="../images/css-logo.png" 
                     alt="Logo da linguagem de estilizção CSS"
                   >
                 </div>
                 <span>
-                  NVL: &nbsp; 
                   <p>Intermediário</p>
+                </span>
+              </li>
+              <li>
+                <div>
+                  <h3>Javascript</h3>
+                  <img 
+                    src="../images/javascript-logo.svg"
+                    alt="Logo da linguagem de programação Javascript"
+                  >
+                </div>
+                <span>
+                  <p>Intermediário</p>
+                </span>
+              </li>
+              <li>
+                <div>
+                  <h3>Typescript</h3>
+                  <img 
+                    src="../images/typescript-logo.svg"
+                    alt="Logo do superset Typescript"
+                  >
+                </div>
+                <span>
+                  <p>Intermediário</p>
+                </span>
+              </li>
+              <li>
+                <div>
+                  <h3>React JS</h3>
+                  <img 
+                    src="../images/react-icon.png"
+                    alt="Logo da biblioteca React"
+                  >
+                </div>
+                <span>
+                  <p>Intermediário</p>
+                </span>
+              </li>
+              <li>
+                <div>
+                  <h3>Angular 2+</h3>
+                  <img 
+                    src="../images/angular-logo.png"
+                    alt="Logo do framework Angular"
+                  >
+                </div>
+                <span>
+                  <p>Intermediário</p>
+                </span>
+              </li>
+              <li>
+                <div>
+                  <h3>Vue JS</h3>
+                  <img 
+                    src="../images/vue-logo.png"
+                    alt="Logo do framework Vue Js"
+                  >
+                </div>
+                <span>
+                  <p style="background-color: var(--blue-primary);">Básico</p>
                 </span>
               </li>
             </ol>
@@ -142,39 +224,96 @@
       </section>
 
       <section>
-        <h2>Redes / Infra / Banco de dados</h2>
+        <h2>Infra / Ferramentas</h2>
         <div class="network-container">
             <ol class="card-container" type="A">
-              <li>
+              <li style="margin-left: 2rem;">
                 <div>
-                  <h3>Redes</h3>
+                  <h3>Sophos XG</h3>
                   <img 
-                    src="../images/java-logo.png" 
-                    alt="Logo da linguagem de programação Java"
+                    src="../images/sophos-logo.svg"
+                    alt="Logo da empresa Sophos"
                   >
                 </div>
                 <span>
-                  NVL: &nbsp; 
                   <p style="background-color: var(--green-primary);">Avançado</p>
                 </span>
               </li>
               <li>
                 <div>
-                  <h3>Firewall</h3>
+                  <h3>Server 2012</h3>
                   <img 
-                    src="../images/java-logo.png" 
-                    alt="Logo da linguagem de programação Java"
+                    src="../images/windows-logo.png" 
+                    alt="Logo do windows"
                   >
                 </div>
                 <span>
-                  NVL: &nbsp; 
                   <p style="background-color: var(--green-primary);">Avançado</p>
+                </span>
+              </li>
+              <li>
+                <div>
+                  <h3>Docker</h3>
+                  <img 
+                    src="../images/docker-logo.svg"
+                    alt="Logo do docker"
+                  >
+                </div>
+                <span>
+                  <p>Intermediário</p>
+                </span>
+              </li>
+              <li>
+                <div>
+                  <h3>Postman</h3>
+                  <img 
+                    src="../images/postman-logo.png"
+                    alt="Logo do postman"
+                  >
+                </div>
+                <span>
+                  <p>Intermediário</p>
+                </span>
+              </li>
+              <li>
+                <div>
+                  <h3>AWS</h3>
+                  <img 
+                    src="../images/aws-logo.png"
+                    alt="Logo do AWS"
+                  >
+                </div>
+                <span>
+                  <p style="background-color: var(--blue-primary);">Básico</p>
+                </span>
+              </li>
+              <li>
+                <div>
+                  <h3>Git</h3>
+                  <img 
+                    src="../images/git-logo.png"
+                    alt="Logo do AWS"
+                  >
+                </div>
+                <span>
+                  <p style="background-color: var(--blue-primary);">Básico</p>
+                </span>
+              </li>
+              <li>
+                <div>
+                  <h3>Github</h3>
+                  <img 
+                    src="../images/github-logo.png"
+                    alt="Logo do AWS"
+                  >
+                </div>
+                <span>
+                  <p style="background-color: var(--blue-primary);">Básico</p>
                 </span>
               </li>
             </ol>
         </div>
       </section>
-
     </section>
   </main>
 </body>
