Added some glitter to conhecimentos page

--- a/public/pages/conhecimentos.html
+++ b/public/pages/conhecimentos.html
@@ -12,6 +12,7 @@
   
   <title>Conhecimentos - Bruno Juwer</title>
 
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 <body>
   <section class="navbar">
@@ -41,7 +42,7 @@
     <h1>Conhecimentos</h1>
     <section>
       <section>
-        <h2>Backend / Banco de dados</h2>
+        <h2>Backend / Banco de dados <i class="ph-fill ph-database"></i></h2>
         <div class="backend-container">
           <ol class="card-container" type="A">
             <li style="margin-left: 2rem;">
@@ -132,7 +133,7 @@
         </div>
       </section>
       <section>
-        <h2>Frontend</h2>
+        <h2>Frontend <i class="ph-bold ph-monitor"></i></h2>
         <div class="frontend-container">
             <ol class="card-container" type="A">
               <li style="margin-left: 2rem;">
@@ -224,7 +225,7 @@
       </section>
 
       <section>
-        <h2>Infra / Ferramentas</h2>
+        <h2>Infra / Ferramentas <i class="ph-bold ph-wrench"></i></h2>
         <div class="network-container">
             <ol class="card-container" type="A">
               <li style="margin-left: 2rem;">
