Add dot when select page

--- a/public/pages/conhecimentos.html
+++ b/public/pages/conhecimentos.html
@@ -24,12 +24,15 @@
         <ul>
           <li>
             <a href="./index.html">SOBRE</a>
+            <i style="color:var(--dark-primary) ;" class="ph-bold ph-dot-outline"></i>
           </li>
           <li> 
             <a href="./conhecimentos.html">CONHECIMENTOS</a>
+            <i class="ph-bold ph-dot-outline"></i>
           </li>
           <li>
             <a href="./objetivos.html">OBJETIVOS</a>
+            <i style="color:var(--dark-primary) ;" class="ph-bold ph-dot-outline"></i>
           </li>
         </ul>
       </nav>
