--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -23,13 +23,16 @@
         <nav>
           <ul>
             <li>
-              <a href="./index.html">SOBRE</a>
+              <a href="./index.html">SOBRE </a>
+              <i class="ph-bold ph-dot-outline"></i>
             </li>
             <li> 
               <a href="./conhecimentos.html">CONHECIMENTOS</a>
+              <i style="color:var(--dark-primary) ;" class="ph-bold ph-dot-outline"></i>
             </li>
             <li>
               <a href="./objetivos.html">OBJETIVOS</a>
+              <i style="color:var(--dark-primary) ;" class="ph-bold ph-dot-outline"></i>
             </li>
           </ul>
         </nav>
