--- a/public/pages/objetivos.html
+++ b/public/pages/objetivos.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="../styles/styles.css">
 
   <title>Objetivos - Bruno Juwer</title>
+  
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 <body>
   <section class="navbar">
@@ -22,12 +24,15 @@
         <ul>
           <li>
             <a href="./index.html">SOBRE</a>
+            <i style="color:var(--dark-primary) ;" class="ph-bold ph-dot-outline"></i>
           </li>
           <li> 
             <a href="./conhecimentos.html">CONHECIMENTOS</a>
+            <i style="color:var(--dark-primary) ;" class="ph-bold ph-dot-outline"></i>
           </li>
           <li>
             <a href="./objetivos.html">OBJETIVOS</a>
+            <i class="ph-bold ph-dot-outline"></i>
           </li>
         </ul>
       </nav>
