Changed some styles in conhecimentos page

--- a/public/pages/conhecimentos.html
+++ b/public/pages/conhecimentos.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <link rel="icon" type="image/png" sizes="16x16"  href="../images/favicon-16x16.png">
+
+  <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 
   <link rel="stylesheet" href="../styles/styles.css">
-  
+
   <title>Conhecimentos - Bruno Juwer</title>
 
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
+
 <body>
   <section class="navbar">
     <div class="image-container">
@@ -26,7 +28,7 @@
             <a href="./index.html">SOBRE</a>
             <i style="color:var(--dark-primary) ;" class="ph-bold ph-dot-outline"></i>
           </li>
-          <li> 
+          <li>
             <a href="./conhecimentos.html">CONHECIMENTOS</a>
             <i class="ph-bold ph-dot-outline"></i>
           </li>
@@ -39,286 +41,225 @@
     </div>
   </section>
 
-  <div class="space"></div>
-
   <main class="knowledge-container">
-    <h1>Conhecimentos</h1>
     <section>
-      <section>
+      <div>
         <h2>Backend / Banco de dados <i class="ph-fill ph-database"></i></h2>
         <div class="backend-container">
           <ol class="card-container" type="A">
             <li style="margin-left: 2rem;">
               <div>
                 <h3>Java</h3>
-                <img 
-                  src="../images/java-logo.png" 
-                  alt="Logo da linguagem de programação Java"
-                >
+                <img src="../images/java-logo.png" alt="Logo da linguagem de programação Java">
               </div>
               <span>
-                <p>Intermediário</p>
+                <p class="intermediate-knowleadge">Intermediário</p>
               </span>
             </li>
             <li>
               <div>
                 <h3>Spring</h3>
-                <img 
-                  src="../images/spring-logo.svg" 
-                  alt="Logo do framework Spring"
-                >
+                <img src="../images/spring-logo.svg" alt="Logo do framework Spring">
               </div>
               <span>
-                <p>Intermediário</p>
+                <p class="intermediate-knowleadge">Intermediário</p>
               </span>
             </li>
             <li>
               <div>
                 <h3>PHP</h3>
-                <img 
-                  src="../images/php-logo.png" 
-                  alt="Logo da linguagem PHP"
-                >
+                <img src="../images/php-logo.png" alt="Logo da linguagem PHP">
               </div>
               <span>
-                <p style="background-color: var(--blue-primary);">Básico</p>
+                <p class="basic-knowleadge">Básico</p>
               </span>
             </li>
             <li>
               <div>
                 <h3>Laravel</h3>
-                <img 
-                  src="../images/laravel-logo.png" 
-                  alt="Logo do framework Laravel"
-                >
+                <img src="../images/laravel-logo.png" alt="Logo do framework Laravel">
               </div>
               <span>
-                <p style="background-color: var(--blue-primary);">Básico</p>
+                <p class="basic-knowleadge">Básico</p>
               </span>
             </li>
             <li>
               <div>
                 <h3>ExpressJS</h3>
-                <img 
-                  src="../images/expressjs.png" 
-                  alt="Logo da blibloteca ExpressJS"
-                >
+                <img src="../images/expressjs.png" alt="Logo da blibloteca ExpressJS">
               </div>
               <span>
-                <p style="background-color: var(--blue-primary);">Básico</p>
+                <p class="basic-knowleadge">Básico</p>
               </span>
             </li>
             <li>
               <div>
                 <h3>MySql</h3>
-                <img 
-                  src="../images/mysql-logo.svg" 
-                  alt="Logo do banco de dados MySql"
-                >
+                <img src="../images/mysql-logo.svg" alt="Logo do banco de dados MySql">
               </div>
               <span>
-                <p style="background-color: var(--blue-primary);">Básico</p>
+                <p class="basic-knowleadge">Básico</p>
               </span>
             </li>
             <li>
               <div>
                 <h3>Postgres</h3>
-                <img 
-                  src="../images/postgres-logo.png" 
-                  alt="Logo do banco de dados Postegres"
-                >
+                <img src="../images/postgres-logo.png" alt="Logo do banco de dados Postegres">
               </div>
               <span>
-                <p style="background-color: var(--blue-primary);">Básico</p>
+                <p class="basic-knowleadge">Básico</p>
               </span>
             </li>
           </ol>
         </div>
-      </section>
-      <section>
+      </div>
+    </section>
+    <section>
+      <div>
         <h2>Frontend <i class="ph-bold ph-monitor"></i></h2>
         <div class="frontend-container">
-            <ol class="card-container" type="A">
-              <li style="margin-left: 2rem;">
-                <div>
-                  <h3>HTML</h3>
-                  <img 
-                    src="../images/html-logo.png" 
-                    alt="Logo da linguagem de marcação HTML"
-                  >
-                </div>
-                <span>
-                  <p>Intermediário</p>
-                </span>
-              </li>
-              <li>
-                <div>
-                  <h3>CSS</h3>
-                  <img 
-                    src="../images/css-logo.png" 
-                    alt="Logo da linguagem de estilizção CSS"
-                  >
-                </div>
-                <span>
-                  <p>Intermediário</p>
-                </span>
-              </li>
-              <li>
-                <div>
-                  <h3>Javascript</h3>
-                  <img 
-                    src="../images/javascript-logo.svg"
-                    alt="Logo da linguagem de programação Javascript"
-                  >
-                </div>
-                <span>
-                  <p>Intermediário</p>
-                </span>
-              </li>
-              <li>
-                <div>
-                  <h3>Typescript</h3>
-                  <img 
-                    src="../images/typescript-logo.svg"
-                    alt="Logo do superset Typescript"
-                  >
-                </div>
-                <span>
-                  <p>Intermediário</p>
-                </span>
-              </li>
-              <li>
-                <div>
-                  <h3>React JS</h3>
-                  <img 
-                    src="../images/react-icon.png"
-                    alt="Logo da biblioteca React"
-                  >
-                </div>
-                <span>
-                  <p>Intermediário</p>
-                </span>
-              </li>
-              <li>
-                <div>
-                  <h3>Angular 2+</h3>
-                  <img 
-                    src="../images/angular-logo.png"
-                    alt="Logo do framework Angular"
-                  >
-                </div>
-                <span>
-                  <p>Intermediário</p>
-                </span>
-              </li>
-              <li>
-                <div>
-                  <h3>Vue JS</h3>
-                  <img 
-                    src="../images/vue-logo.png"
-                    alt="Logo do framework Vue Js"
-                  >
-                </div>
-                <span>
-                  <p style="background-color: var(--blue-primary);">Básico</p>
-                </span>
-              </li>
-            </ol>
+          <ol class="card-container" type="A">
+            <li style="margin-left: 2rem;">
+              <div>
+                <h3>HTML</h3>
+                <img src="../images/html-logo.png" alt="Logo da linguagem de marcação HTML">
+              </div>
+              <span>
+                <p class="intermediate-knowleadge">Intermediário</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>CSS</h3>
+                <img src="../images/css-logo.png" alt="Logo da linguagem de estilizção CSS">
+              </div>
+              <span>
+                <p class="intermediate-knowleadge">Intermediário</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>Javascript</h3>
+                <img src="../images/javascript-logo.svg" alt="Logo da linguagem de programação Javascript">
+              </div>
+              <span>
+                <p class="intermediate-knowleadge">Intermediário</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>Typescript</h3>
+                <img src="../images/typescript-logo.svg" alt="Logo do superset Typescript">
+              </div>
+              <span>
+                <p class="intermediate-knowleadge">Intermediário</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>React JS</h3>
+                <img src="../images/react-icon.png" alt="Logo da biblioteca React">
+              </div>
+              <span>
+                <p class="intermediate-knowleadge">Intermediário</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>Angular 2+</h3>
+                <img src="../images/angular-logo.png" alt="Logo do framework Angular">
+              </div>
+              <span>
+                <p class="intermediate-knowleadge">Intermediário</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>Vue JS</h3>
+                <img src="../images/vue-logo.png" alt="Logo do framework Vue Js">
+              </div>
+              <span>
+                <p class="basic-knowleadge">Básico</p>
+              </span>
+            </li>
+          </ol>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section>
+    <section>
+      <div>
         <h2>Infra / Ferramentas <i class="ph-bold ph-wrench"></i></h2>
         <div class="network-container">
-            <ol class="card-container" type="A">
-              <li style="margin-left: 2rem;">
-                <div>
-                  <h3>Sophos XG</h3>
-                  <img 
-                    src="../images/sophos-logo.svg"
-                    alt="Logo da empresa Sophos"
-                  >
-                </div>
-                <span>
-                  <p style="background-color: var(--green-primary);">Avançado</p>
-                </span>
-              </li>
-              <li>
-                <div>
-                  <h3>Server 2012</h3>
-                  <img 
-                    src="../images/windows-logo.png" 
-                    alt="Logo do windows"
-                  >
-                </div>
-                <span>
-                  <p style="background-color: var(--green-primary);">Avançado</p>
-                </span>
-              </li>
-              <li>
-                <div>
-                  <h3>Docker</h3>
-                  <img 
-                    src="../images/docker-logo.svg"
-                    alt="Logo do docker"
-                  >
-                </div>
-                <span>
-                  <p>Intermediário</p>
-                </span>
-              </li>
-              <li>
-                <div>
-                  <h3>Postman</h3>
-                  <img 
-                    src="../images/postman-logo.png"
-                    alt="Logo do postman"
-                  >
-                </div>
-                <span>
-                  <p>Intermediário</p>
-                </span>
-              </li>
-              <li>
-                <div>
-                  <h3>AWS</h3>
-                  <img 
-                    src="../images/aws-logo.png"
-                    alt="Logo do AWS"
-                  >
-                </div>
-                <span>
-                  <p style="background-color: var(--blue-primary);">Básico</p>
-                </span>
-              </li>
-              <li>
-                <div>
-                  <h3>Git</h3>
-                  <img 
-                    src="../images/git-logo.png"
-                    alt="Logo do AWS"
-                  >
-                </div>
-                <span>
-                  <p style="background-color: var(--blue-primary);">Básico</p>
-                </span>
-              </li>
-              <li>
-                <div>
-                  <h3>Github</h3>
-                  <img 
-                    src="../images/github-logo.png"
-                    alt="Logo do AWS"
-                  >
-                </div>
-                <span>
-                  <p style="background-color: var(--blue-primary);">Básico</p>
-                </span>
-              </li>
-            </ol>
+          <ol class="card-container" type="A">
+            <li style="margin-left: 2rem;">
+              <div>
+                <h3>Sophos XG</h3>
+                <img src="../images/sophos-logo.svg" alt="Logo da empresa Sophos">
+              </div>
+              <span>
+                <p class="advanced-knowleadge">Avançado</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>Server 2012</h3>
+                <img src="../images/windows-logo.png" alt="Logo do windows">
+              </div>
+              <span>
+                <p class="advanced-knowleadge">Avançado</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>Docker</h3>
+                <img src="../images/docker-logo.svg" alt="Logo do docker">
+              </div>
+              <span>
+                <p class="intermediate-knowleadge">Intermediário</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>Postman</h3>
+                <img src="../images/postman-logo.png" alt="Logo do postman">
+              </div>
+              <span>
+                <p class="intermediate-knowleadge">Intermediário</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>AWS</h3>
+                <img src="../images/aws-logo.png" alt="Logo do AWS">
+              </div>
+              <span>
+                <p class="basic-knowleadge">Básico</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>Git</h3>
+                <img src="../images/git-logo.png" alt="Logo do AWS">
+              </div>
+              <span>
+                <p class="basic-knowleadge">Básico</p>
+              </span>
+            </li>
+            <li>
+              <div>
+                <h3>Github</h3>
+                <img src="../images/github-logo.png" alt="Logo do AWS">
+              </div>
+              <span>
+                <p class="basic-knowleadge">Básico</p>
+              </span>
+            </li>
+          </ol>
         </div>
-      </section>
+      </div>
     </section>
   </main>
 </body>
+
 </html>
