--- a/public/pages/objetivos.html
+++ b/public/pages/objetivos.html
@@ -38,6 +38,8 @@
       </nav>
     </div>
   </section>
-  <div class="space"></div>
+  <main>
+    <h1>Objetivos</h1>
+  </main>
 </body>
 </html>
