Started configs for responsiveness

--- a/public/pages/conhecimentos.html
+++ b/public/pages/conhecimentos.html
@@ -44,7 +44,7 @@
   <main class="knowledge-container">
     <section>
       <div>
-        <h2>Backend / Banco de dados <i class="ph-fill ph-database"></i></h2>
+        <h2>Backend / Banco de dados <i class="ph-fill ph-database default-icon-color"></i></h2>
         <div class="backend-container">
           <ol class="card-container" type="A">
             <li style="margin-left: 2rem;">
@@ -116,7 +116,7 @@
     </section>
     <section>
       <div>
-        <h2>Frontend <i class="ph-bold ph-monitor"></i></h2>
+        <h2>Frontend <i class="ph-bold ph-monitor default-icon-color"></i></h2>
         <div class="frontend-container">
           <ol class="card-container" type="A">
             <li style="margin-left: 2rem;">
@@ -189,7 +189,7 @@
 
     <section>
       <div>
-        <h2>Infra / Ferramentas <i class="ph-bold ph-wrench"></i></h2>
+        <h2>Infra / Ferramentas <i class="ph-bold ph-wrench default-icon-color"></i></h2>
         <div class="network-container">
           <ol class="card-container" type="A">
             <li style="margin-left: 2rem;">
