--- a/public/pages/objetivos.html
+++ b/public/pages/objetivos.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <link rel="icon" type="image/png" sizes="16x16"  href="../images/favicon-16x16.png">
+
+  <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 
   <link rel="stylesheet" href="../styles/styles.css">
 
   <title>Objetivos - Bruno Juwer</title>
-  
+
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
+
 <body>
   <section class="navbar">
     <div class="image-container">
@@ -26,7 +28,7 @@
             <a href="./index.html">SOBRE</a>
             <i style="color:var(--dark-primary) ;" class="ph-bold ph-dot-outline"></i>
           </li>
-          <li> 
+          <li>
             <a href="./conhecimentos.html">CONHECIMENTOS</a>
             <i style="color:var(--dark-primary) ;" class="ph-bold ph-dot-outline"></i>
           </li>
@@ -38,8 +40,27 @@
       </nav>
     </div>
   </section>
-  <main>
-    <h1>Objetivos</h1>
+  <main class="goals">
+    <section>
+      <h2>Profissionais <i class="ph ph-briefcase-metal default-icon-color"></i></h2>
+      <div>
+        <ul>
+          <li>Finalizar com sucesso o Programa <span>Despertar.Dev</span></li>
+          <li>Ser contratado pelo patrocinador do programa a <span>Cooperativa Sicredi Pioneira</span></li>
+          <li>Finalizar a faculdade de Análise e Desenvolvimento de Sistemas</li>
+        </ul>
+      </div>
+    </section>
+    <section>
+      <h2>Pessoais <i class="ph ph-user default-icon-color"></i></h2>
+      <div>
+        <ul>
+          <li>Me cercar de pessoas boas</li>
+          <li>Manter uma rotina saudável tanto fisicamente quanto mentalmente</li>
+          <li>Me tornar uma pessoa melhor a cada dia</li>
+        </ul>
+      </div>
+    </section>
   </main>
 </body>
 </html>
