Changed html files to public folder and removed pages folder

--- a/public/objetivos.html
+++ b/public/objetivos.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 
-  <link rel="stylesheet" href="../styles/styles.css">
+  <link rel="stylesheet" href="./styles/styles.css">
 
   <title>Objetivos - Bruno Juwer</title>
 
@@ -19,7 +19,7 @@
 <body>
   <section class="navbar">
     <div class="image-container">
-      <img src="../images/bruno.jpg" alt="Foto de Bruno Juwer">
+      <img src="./images/bruno.jpg" alt="Foto de Bruno Juwer">
     </div>
     <div class="nav-container">
       <nav>
