--- a/public/conhecimentos.html
+++ b/public/conhecimentos.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 
-  <link rel="stylesheet" href="../styles/styles.css">
+  <link rel="stylesheet" href="./styles/styles.css">
 
   <title>Conhecimentos - Bruno Juwer</title>
 
@@ -19,7 +19,7 @@
 <body>
   <section class="navbar">
     <div class="image-container">
-      <img src="../images/bruno.jpg" alt="Foto de Bruno Juwer">
+      <img src="./images/bruno.jpg" alt="Foto de Bruno Juwer">
     </div>
     <div class="nav-container">
       <nav>
@@ -50,7 +50,7 @@
             <li style="margin-left: 2rem;">
               <div>
                 <h3>Java</h3>
-                <img src="../images/java-logo.png" alt="Logo da linguagem de programação Java">
+                <img src="./images/java-logo.png" alt="Logo da linguagem de programação Java">
               </div>
               <span>
                 <p class="intermediate-knowleadge">Intermediário</p>
@@ -59,7 +59,7 @@
             <li>
               <div>
                 <h3>Spring</h3>
-                <img src="../images/spring-logo.svg" alt="Logo do framework Spring">
+                <img src="./images/spring-logo.svg" alt="Logo do framework Spring">
               </div>
               <span>
                 <p class="intermediate-knowleadge">Intermediário</p>
@@ -68,7 +68,7 @@
             <li>
               <div>
                 <h3>PHP</h3>
-                <img src="../images/php-logo.png" alt="Logo da linguagem PHP">
+                <img src="./images/php-logo.png" alt="Logo da linguagem PHP">
               </div>
               <span>
                 <p class="basic-knowleadge">Básico</p>
@@ -77,7 +77,7 @@
             <li>
               <div>
                 <h3>Laravel</h3>
-                <img src="../images/laravel-logo.png" alt="Logo do framework Laravel">
+                <img src="./images/laravel-logo.png" alt="Logo do framework Laravel">
               </div>
               <span>
                 <p class="basic-knowleadge">Básico</p>
@@ -86,7 +86,7 @@
             <li>
               <div>
                 <h3>ExpressJS</h3>
-                <img src="../images/expressjs.png" alt="Logo da blibloteca ExpressJS">
+                <img src="./images/expressjs.png" alt="Logo da blibloteca ExpressJS">
               </div>
               <span>
                 <p class="basic-knowleadge">Básico</p>
@@ -95,7 +95,7 @@
             <li>
               <div>
                 <h3>MySql</h3>
-                <img src="../images/mysql-logo.svg" alt="Logo do banco de dados MySql">
+                <img src="./images/mysql-logo.svg" alt="Logo do banco de dados MySql">
               </div>
               <span>
                 <p class="basic-knowleadge">Básico</p>
@@ -104,7 +104,7 @@
             <li>
               <div>
                 <h3>Postgres</h3>
-                <img src="../images/postgres-logo.png" alt="Logo do banco de dados Postegres">
+                <img src="./images/postgres-logo.png" alt="Logo do banco de dados Postegres">
               </div>
               <span>
                 <p class="basic-knowleadge">Básico</p>
@@ -122,7 +122,7 @@
             <li style="margin-left: 2rem;">
               <div>
                 <h3>HTML</h3>
-                <img src="../images/html-logo.png" alt="Logo da linguagem de marcação HTML">
+                <img src="./images/html-logo.png" alt="Logo da linguagem de marcação HTML">
               </div>
               <span>
                 <p class="intermediate-knowleadge">Intermediário</p>
@@ -131,7 +131,7 @@
             <li>
               <div>
                 <h3>CSS</h3>
-                <img src="../images/css-logo.png" alt="Logo da linguagem de estilizção CSS">
+                <img src="./images/css-logo.png" alt="Logo da linguagem de estilizção CSS">
               </div>
               <span>
                 <p class="intermediate-knowleadge">Intermediário</p>
@@ -140,7 +140,7 @@
             <li>
               <div>
                 <h3>Javascript</h3>
-                <img src="../images/javascript-logo.svg" alt="Logo da linguagem de programação Javascript">
+                <img src="./images/javascript-logo.svg" alt="Logo da linguagem de programação Javascript">
               </div>
               <span>
                 <p class="intermediate-knowleadge">Intermediário</p>
@@ -149,7 +149,7 @@
             <li>
               <div>
                 <h3>Typescript</h3>
-                <img src="../images/typescript-logo.svg" alt="Logo do superset Typescript">
+                <img src="./images/typescript-logo.svg" alt="Logo do superset Typescript">
               </div>
               <span>
                 <p class="intermediate-knowleadge">Intermediário</p>
@@ -158,7 +158,7 @@
             <li>
               <div>
                 <h3>React JS</h3>
-                <img src="../images/react-icon.png" alt="Logo da biblioteca React">
+                <img src="./images/react-icon.png" alt="Logo da biblioteca React">
               </div>
               <span>
                 <p class="intermediate-knowleadge">Intermediário</p>
@@ -167,7 +167,7 @@
             <li>
               <div>
                 <h3>Angular 2+</h3>
-                <img src="../images/angular-logo.png" alt="Logo do framework Angular">
+                <img src="./images/angular-logo.png" alt="Logo do framework Angular">
               </div>
               <span>
                 <p class="intermediate-knowleadge">Intermediário</p>
@@ -176,7 +176,7 @@
             <li>
               <div>
                 <h3>Vue JS</h3>
-                <img src="../images/vue-logo.png" alt="Logo do framework Vue Js">
+                <img src="./images/vue-logo.png" alt="Logo do framework Vue Js">
               </div>
               <span>
                 <p class="basic-knowleadge">Básico</p>
@@ -195,7 +195,7 @@
             <li style="margin-left: 2rem;">
               <div>
                 <h3>Sophos XG</h3>
-                <img src="../images/sophos-logo.svg" alt="Logo da empresa Sophos">
+                <img src="./images/sophos-logo.svg" alt="Logo da empresa Sophos">
               </div>
               <span>
                 <p class="advanced-knowleadge">Avançado</p>
@@ -204,7 +204,7 @@
             <li>
               <div>
                 <h3>Server 2012</h3>
-                <img src="../images/windows-logo.png" alt="Logo do windows">
+                <img src="./images/windows-logo.png" alt="Logo do windows">
               </div>
               <span>
                 <p class="advanced-knowleadge">Avançado</p>
@@ -213,7 +213,7 @@
             <li>
               <div>
                 <h3>Docker</h3>
-                <img src="../images/docker-logo.svg" alt="Logo do docker">
+                <img src="./images/docker-logo.svg" alt="Logo do docker">
               </div>
               <span>
                 <p class="intermediate-knowleadge">Intermediário</p>
@@ -222,7 +222,7 @@
             <li>
               <div>
                 <h3>Postman</h3>
-                <img src="../images/postman-logo.png" alt="Logo do postman">
+                <img src="./images/postman-logo.png" alt="Logo do postman">
               </div>
               <span>
                 <p class="intermediate-knowleadge">Intermediário</p>
@@ -231,7 +231,7 @@
             <li>
               <div>
                 <h3>AWS</h3>
-                <img src="../images/aws-logo.png" alt="Logo do AWS">
+                <img src="./images/aws-logo.png" alt="Logo do AWS">
               </div>
               <span>
                 <p class="basic-knowleadge">Básico</p>
@@ -240,7 +240,7 @@
             <li>
               <div>
                 <h3>Git</h3>
-                <img src="../images/git-logo.png" alt="Logo do AWS">
+                <img src="./images/git-logo.png" alt="Logo do AWS">
               </div>
               <span>
                 <p class="basic-knowleadge">Básico</p>
@@ -249,7 +249,7 @@
             <li>
               <div>
                 <h3>Github</h3>
-                <img src="../images/github-logo.png" alt="Logo do AWS">
+                <img src="./images/github-logo.png" alt="Logo do AWS">
               </div>
               <span>
                 <p class="basic-knowleadge">Básico</p>
