--- a/public/conhecimentos.html
+++ b/public/conhecimentos.html
@@ -49,7 +49,7 @@
           <ol class="card-container" type="A">
             <li style="margin-left: 2rem;">
               <div>
-                <h3>Java</h3>
+                <h3 class="card-title">Java</h3>
                 <img src="./images/java-logo.png" alt="Logo da linguagem de programação Java">
               </div>
               <span>
@@ -58,7 +58,7 @@
             </li>
             <li>
               <div>
-                <h3>Spring</h3>
+                <h3 class="card-title">Spring</h3>
                 <img src="./images/spring-logo.svg" alt="Logo do framework Spring">
               </div>
               <span>
@@ -67,7 +67,7 @@
             </li>
             <li>
               <div>
-                <h3>PHP</h3>
+                <h3 class="card-title">PHP</h3>
                 <img src="./images/php-logo.png" alt="Logo da linguagem PHP">
               </div>
               <span>
@@ -76,7 +76,7 @@
             </li>
             <li>
               <div>
-                <h3>Laravel</h3>
+                <h3 class="card-title">Laravel</h3>
                 <img src="./images/laravel-logo.png" alt="Logo do framework Laravel">
               </div>
               <span>
@@ -85,7 +85,7 @@
             </li>
             <li>
               <div>
-                <h3>ExpressJS</h3>
+                <h3 class="card-title">ExpressJS</h3>
                 <img src="./images/expressjs.png" alt="Logo da blibloteca ExpressJS">
               </div>
               <span>
@@ -94,7 +94,7 @@
             </li>
             <li>
               <div>
-                <h3>MySql</h3>
+                <h3 class="card-title">MySql</h3>
                 <img src="./images/mysql-logo.svg" alt="Logo do banco de dados MySql">
               </div>
               <span>
@@ -103,7 +103,7 @@
             </li>
             <li>
               <div>
-                <h3>Postgres</h3>
+                <h3 class="card-title">Postgres</h3>
                 <img src="./images/postgres-logo.png" alt="Logo do banco de dados Postegres">
               </div>
               <span>
@@ -121,7 +121,7 @@
           <ol class="card-container" type="A">
             <li style="margin-left: 2rem;">
               <div>
-                <h3>HTML</h3>
+                <h3 class="card-title">HTML</h3>
                 <img src="./images/html-logo.png" alt="Logo da linguagem de marcação HTML">
               </div>
               <span>
@@ -130,7 +130,7 @@
             </li>
             <li>
               <div>
-                <h3>CSS</h3>
+                <h3 class="card-title">CSS</h3>
                 <img src="./images/css-logo.png" alt="Logo da linguagem de estilizção CSS">
               </div>
               <span>
@@ -139,7 +139,7 @@
             </li>
             <li>
               <div>
-                <h3>Javascript</h3>
+                <h3 class="card-title">Javascript</h3>
                 <img src="./images/javascript-logo.svg" alt="Logo da linguagem de programação Javascript">
               </div>
               <span>
@@ -148,7 +148,7 @@
             </li>
             <li>
               <div>
-                <h3>Typescript</h3>
+                <h3 class="card-title">Typescript</h3>
                 <img src="./images/typescript-logo.svg" alt="Logo do superset Typescript">
               </div>
               <span>
@@ -157,7 +157,7 @@
             </li>
             <li>
               <div>
-                <h3>React JS</h3>
+                <h3 class="card-title">React JS</h3>
                 <img src="./images/react-icon.png" alt="Logo da biblioteca React">
               </div>
               <span>
@@ -166,7 +166,7 @@
             </li>
             <li>
               <div>
-                <h3>Angular 2+</h3>
+                <h3 class="card-title">Angular 2+</h3>
                 <img src="./images/angular-logo.png" alt="Logo do framework Angular">
               </div>
               <span>
@@ -175,7 +175,7 @@
             </li>
             <li>
               <div>
-                <h3>Vue JS</h3>
+                <h3 class="card-title">Vue JS</h3>
                 <img src="./images/vue-logo.png" alt="Logo do framework Vue Js">
               </div>
               <span>
@@ -194,7 +194,7 @@
           <ol class="card-container" type="A">
             <li style="margin-left: 2rem;">
               <div>
-                <h3>Sophos XG</h3>
+                <h3 class="card-title">Sophos XG</h3>
                 <img src="./images/sophos-logo.svg" alt="Logo da empresa Sophos">
               </div>
               <span>
@@ -203,7 +203,7 @@
             </li>
             <li>
               <div>
-                <h3>Server 2012</h3>
+                <h3 class="card-title">Server 2012</h3>
                 <img src="./images/windows-logo.png" alt="Logo do windows">
               </div>
               <span>
@@ -212,7 +212,7 @@
             </li>
             <li>
               <div>
-                <h3>Docker</h3>
+                <h3 class="card-title">Docker</h3>
                 <img src="./images/docker-logo.svg" alt="Logo do docker">
               </div>
               <span>
@@ -221,7 +221,7 @@
             </li>
             <li>
               <div>
-                <h3>Postman</h3>
+                <h3 class="card-title">Postman</h3>
                 <img src="./images/postman-logo.png" alt="Logo do postman">
               </div>
               <span>
@@ -230,7 +230,7 @@
             </li>
             <li>
               <div>
-                <h3>AWS</h3>
+                <h3 class="card-title">AWS</h3>
                 <img src="./images/aws-logo.png" alt="Logo do AWS">
               </div>
               <span>
@@ -239,7 +239,7 @@
             </li>
             <li>
               <div>
-                <h3>Git</h3>
+                <h3 class="card-title">Git</h3>
                 <img src="./images/git-logo.png" alt="Logo do AWS">
               </div>
               <span>
@@ -248,7 +248,7 @@
             </li>
             <li>
               <div>
-                <h3>Github</h3>
+                <h3 class="card-title">Github</h3>
                 <img src="./images/github-logo.png" alt="Logo do AWS">
               </div>
               <span>
