--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
         </nav>
       </div>
     </section>
+    <div class="space"></div>
 
     <main class="about-container">
       <h1>Bruno <span>Juwer</span></h1>
