--- a/public/objetivos.html
+++ b/public/objetivos.html
@@ -40,6 +40,8 @@
       </nav>
     </div>
   </section>
+  <div class="space"></div>
+
   <main class="goals">
     <section>
       <h2>Profissionais <i class="ph ph-briefcase-metal default-icon-color"></i></h2>
