change text in sobre page

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
       <div class="about-me">
         <p>
           <i class="ph-fill ph-hand-waving"></i>
-          Seja bem-vindo(a) ao meu portifólio, sou um desenvolverdor fullstack apaixonado por técnologia e música!
+          Seja bem-vindo(a) ao meu currículo, sou um desenvolverdor fullstack apaixonado por técnologia e música!
         </p>
       </div>
       <div class="social-media-container">
